--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "proxy": "http://localhost:8888",
   "homepage": "https://geoservice.ist.supsi.ch/bms",
   "dependencies": {
+    "eslint": "^5.7.0",
     "i18next": "^11.3.3",
     "i18next-browser-languagedetector": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ol": "^5.1.3",
+    "proj4": "^2.5.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-datepicker": "^1.5.0",
