--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,12 @@
           ".json"
         ]
       }
+    },
+    "react": {
+      "createClass": "createReactClass",
+      "pragma": "React",
+      "version": "detect",
+      "flowVersion": "0.53"
     }
   },
   "rules": {
@@ -268,7 +274,7 @@
     "react/jsx-wrap-multilines": "warn",
     "react/no-deprecated": "warn",
     "react/no-did-mount-set-state": "warn",
-    "react/no-did-update-set-state": false,
+    "react/no-did-update-set-state": "off",
     "react/no-direct-mutation-state": "warn",
     "react/no-is-mounted": "warn",
     "react/no-unused-prop-types": "warn",
