--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.4.1",
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.3.0",
     "react-highlighter": "^0.4.3",
     "react-i18next": "^7.7.0",
     "react-redux": "^5.0.7",
