--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bmsapp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:8888",
   "homepage": "https://geoservice.ist.supsi.ch/bms",
-  "author": "mantonovic",
+  "author": "SUPSI",
   "dependencies": {
     "eslint": "^5.7.0",
     "i18next": "^11.3.3",
