--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 # dependencies
 /node_modules
 
-# testing
-/coverage
-
 # production
 /build
 
@@ -13,12 +10,7 @@
 /.vscode
 
 # misc
-*.svg
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/public/img/lit/*
 
 npm-debug.log*
 yarn-debug.log*
