--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bmsapp",
+  "name": "bdms",
   "version": "1.0.0",
+  "description": "Bohrehole Data Management System",
   "private": true,
   "proxy": "http://localhost:8888",
-  "homepage": "https://geoservice.ist.supsi.ch/bms",
-  "author": "SUPSI",
+  "author": "IST-SUPSI",
   "dependencies": {
     "eslint": "^5.7.0",
     "i18next": "^11.3.3",
