--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,20 @@ server {
         index      index.html index.htm;
     }
 
+    location /api/v1 {
+            proxy_pass      http://app_service-bdms_1/api/v1;
+                        proxy_redirect          default;
+                        proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
+                        proxy_set_header        X-Real-IP $remote_addr;
+                        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+                        client_max_body_size    10m;
+                        client_body_buffer_size 128k;
+                        proxy_connect_timeout   90;
+                        proxy_send_timeout      90;
+                        proxy_read_timeout      90;
+                        proxy_buffers           32 4k;
+    }
+
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504  /50x.html;
@@ -15,4 +29,4 @@ server {
         root   /usr/share/nginx/html;
     }
 
-}
+} 
