--- a/default.conf
+++ b/default.conf
@@ -8,8 +8,8 @@ server {
         index      index.html index.htm;
     }
 
-    location /api/v1 {
-        proxy_pass		http://web-bdms_service-bdms_1/api/v1;
+    location /api/ {
+        proxy_pass              http://bdms_service-bdms_1:80/api/;
         proxy_redirect          default;
         proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
         proxy_set_header        X-Real-IP $remote_addr;
