--- a/default.conf
+++ b/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass              http://bdms_service-bdms_1:80/api/;
+        proxy_pass              http://bdms_service-bdms:80/api/;
         proxy_redirect          default;
         proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
         proxy_set_header        X-Real-IP $remote_addr;
