--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "Milan P. Antonovic <milan.antonovic@supsi.ch> (https://github.com/mantonovic)"
   ],
   "dependencies": {
-    "@ist-supsi/stratigraphy": "~1.0.5",
     "@ist-supsi/bmsjs": "1.0.7",
+    "@ist-supsi/stratigraphy": "~1.0.5",
     "date-fns": "^2.9.0",
     "eslint": "^6.8.0",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
+    "markdown-to-jsx": "^6.11.4",
     "moment": "^2.24.0",
     "ol": "^5.3.0",
     "proj4": "^2.6.0",
