--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "dependencies": {
     "@ist-supsi/bmsjs": "1.0.7",
-    "@ist-supsi/stratigraphy": "~1.0.5",
+    "@ist-supsi/stratigraphy": "1.0.6",
+    "axios": "^0.19.0",
     "date-fns": "^2.9.0",
     "eslint": "^6.8.0",
     "i18next": "^19.1.0",
