--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdms",
-  "version": "1.0.0-RC1",
+  "version": "1.0.1",
   "description": "Bohrehole Data Management System",
   "private": true,
   "proxy": "http://localhost:8888",
