--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.8.0",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-http-backend": "^1.0.21",
     "lodash": "^4.17.15",
     "markdown-to-jsx": "^6.11.4",
     "moment": "^2.24.0",
@@ -44,8 +45,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "csv-parser": "^2.3.3",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-react": "^7.18.3",
+    "minimist": "^1.2.5",
+    "wget-improved": "^3.2.1"
   },
   "browserslist": {
     "production": [
