--- a/default.conf
+++ b/default.conf
@@ -1,20 +1,45 @@
 server {
     listen       80;
+    listen  [::]:80;
     server_name  localhost;
 
     location / {
         try_files  $uri $uri/ /index.html;
-        root       /usr/share/nginx/html;
-        index      index.html index.htm;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
     }
 
+    # location /bdms/api/ {
     location /api/ {
-        proxy_pass              http://bdms_service-bdms:80/api/;
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,bdms-authorization,Authorization,Origin,Accept,Referer';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 200;
+        }
+        if ($request_method = 'POST') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,bdms-authorization,Authorization,Origin,Accept,Referer';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+        }
+        if ($request_method = 'GET') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,bdms-authorization,Authorization,Origin,Accept,Referer';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+        }
+
+        proxy_pass              http://service-bdms:8888/api/;
         proxy_redirect          default;
         proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        client_max_body_size    10m;
+        client_max_body_size    50m;
         client_body_buffer_size 128k;
         proxy_connect_timeout   90;
         proxy_send_timeout      90;
@@ -22,10 +47,18 @@ server {
         proxy_buffers           32 4k;
     }
 
+    #error_page  404              /404.html;
+
     # redirect server error pages to the static page /50x.html
+    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+    
+    # location /bdms {
+    #     try_files  $uri $uri/ /index.html;
+    #     root   /usr/share/nginx/html;
+    # }
 
-} 
+}
