--- a/default.conf
+++ b/default.conf
@@ -34,7 +34,7 @@ server {
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
 
-        proxy_pass              http://service-bdms:8888/api/;
+        proxy_pass              http://swissforages-service-bdms:8888/api/;
         proxy_redirect          default;
         proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
         proxy_set_header        X-Real-IP $remote_addr;
@@ -55,10 +55,5 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-    
-    # location /bdms {
-    #     try_files  $uri $uri/ /index.html;
-    #     root   /usr/share/nginx/html;
-    # }
 
 }
