--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Milan P. Antonovic <milan.antonovic@supsi.ch> (https://github.com/mantonovic)"
   ],
   "dependencies": {
-    "@ist-supsi/bmsjs": "1.0.10-beta.0",
+    "@ist-supsi/bmsjs": "1.0.10",
     "@ist-supsi/stratigraphy": "1.0.6",
     "axios": "^0.19.0",
     "date-fns": "^2.9.0",
