--- a/demo.default.conf
+++ b/demo.default.conf
@@ -35,7 +35,7 @@ server {
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
 
-        proxy_pass              http://service-bdms:8888/api/;
+        proxy_pass              http://swissforages-service-bdms:8888/api/;
         proxy_redirect          default;
         proxy_set_header        Host $proxy_add_x_forwarded_for; #$host;
         proxy_set_header        X-Real-IP $remote_addr;
