--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.4",
   "description": "Bohrehole Data Management System",
   "private": true,
-  "proxy": "http://localhost:8888",
+  "proxy": "http://service-bdms:8888/",
   "author": "SUPSI <geoservice@supsi.ch> (https://github.com/ist-supsi)",
   "contributors": [
     "Milan P. Antonovic <milan.antonovic@supsi.ch> (https://github.com/mantonovic)"
