--- a/default.dev.conf
+++ b/default.dev.conf
@@ -1,17 +1,44 @@
+upstream front {
+    server swissforages-web-dev:80;
+}
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
 
-    index index.html;
-    
-    location /bdms {
-	    try_files $uri $uri/ /bdms/index.html;
-        alias  /usr/share/nginx/html;
-        index index.html;
+    resolver    127.0.0.11   valid=30s; 
+
+    ignore_invalid_headers off;
+    client_max_body_size 1000m;
+
+
+    location / {
+        proxy_pass              http://front;
+        proxy_redirect off;
     }
 
-    location /bdms/api/ {
+    location /sockjs-node {
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+
+        proxy_pass http://front; 
+
+        proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    # location /bdms/api/ {
+    location /api/ {
 
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
